syntax = "proto3";

option go_package = "matsuokashuhei/grocerystore";
package grocerystore;

service CustomerService {
    rpc SignUp(SignUpRequest) returns (SignUpResposne) {}
}

message SignUpRequest {
    string name = 1;
    string email = 2;
    string password = 3;
}

message SignUpResposne {
    string uid = 1;
}
